// DBML for Chronos Luxury database

Table roles {
  id int [pk, increment]
  name varchar(50) [unique, not null]
  created_at timestamp
  updated_at timestamp
}

Table users {
  id int [pk, increment]
  name varchar(255) [not null]
  email varchar(255) [unique, not null]
  email_verified_at timestamp
  password varchar(255) [not null]
  role_id int [ref: > roles.id, default: 2]
  remember_token varchar(100)
  created_at timestamp
  updated_at timestamp
}

Table personal_access_tokens {
  id int [pk, increment]
  tokenable_type varchar(255) [not null]
  tokenable_id int [not null]
  name varchar(255) [not null]
  token varchar(64) [unique, not null]
  abilities text
  last_used_at timestamp
  expires_at timestamp
  created_at timestamp
  updated_at timestamp
}

Table products {
  id int [pk, increment]
  name varchar(255) [not null]
  brand varchar(100) [not null]
  price decimal(10,2) [not null]
  image varchar(500)
  description text
  category varchar(50) [not null]
  stock int [default: 0]
  is_active boolean [default: true]
  created_at timestamp
  updated_at timestamp
}

Table product_features {
  id int [pk, increment]
  product_id int [ref: > products.id, not null]
  feature varchar(255) [not null]
}

Table carts {
  id int [pk, increment]
  user_id int [ref: > users.id, unique, not null]
  created_at timestamp
  updated_at timestamp
}

Table cart_items {
  id int [pk, increment]
  cart_id int [ref: > carts.id, not null]
  product_id int [ref: > products.id, not null]
  quantity int [default: 1]
  created_at timestamp
  updated_at timestamp
}

Table orders {
  id int [pk, increment]
  user_id int [ref: > users.id, not null]
  recipient_name varchar(255)
  phone varchar(255)
  address_line1 varchar(255)
  address_line2 varchar(255)
  city varchar(255)
  state varchar(255)
  postal_code varchar(255)
  country varchar(255)
  total_amount decimal(10,2) [not null]
  tax_amount decimal(10,2) [not null]
  status varchar(20) [note: "enum: pending, processing, shipped, delivered, cancelled", default: 'pending']
  created_at timestamp
  updated_at timestamp
}

Table order_items {
  id int [pk, increment]
  order_id int [ref: > orders.id, not null]
  product_id int [ref: > products.id, not null]
  product_name varchar(255) [not null]
  price decimal(10,2) [not null]
  quantity int [not null]
}

Table contact_messages {
  id int [pk, increment]
  name varchar(255) [not null]
  email varchar(255) [not null]
  subject varchar(255)
  message text [not null]
  is_read boolean [default: false]
  created_at timestamp
  updated_at timestamp
}

// Relationships (explicit refs are already declared inline)

// End of DBML
